--- a/write_up.tex
+++ b/write_up.tex
@@ -100,12 +100,12 @@ Morphological image processing techniques were adopted upon frames captured by t
 \pagebreak
 \tableofcontents
 \begin{center}
-\vspace*{\fill}\small{\bf This report is dedicated to ‘deed’ on the Maemo forum.}
+\vspace*{\fill}\small{\bf This report is dedicated to ‘deed’ on the Maemo forums}
 \end{center}
 %This is awesome! It automaticaly generates a TOC depending on the part,section,subsection structure declared below!
 \pagebreak
 
-%\import{parts/}{background.tex}
+\import{parts/}{background.tex}
 %\import{parts/}{motiondetect.tex}
 %\import{parts/}{timelapse.tex}
 %\import{parts/}{ipstreamer.tex}
@@ -114,7 +114,7 @@ Morphological image processing techniques were adopted upon frames captured by t
 
 %\part{Bibliography}
 
-\import{parts/}{appendix.tex}
+%\import{parts/}{appendix.tex}
 
 \end{document}
 
